--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">World_population</string>
     <string name="signin">Sing in</string>
+
+    <string name="countryRequest">https://restcountries.eu/rest/v1/all</string>
 </resources>
