--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="countryURL">https://restcountries.eu/rest/v1/all</string>
     <string name="worldBankURL">http://api.worldbank.org/countries/</string>
 
+    <!--Indicators-->
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="intentTitle">Choose app for saving:</string>
-    <string name="indicatorGDP">NY.GDP.PCAP.CD</string>
 </resources>
