--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,14 @@
     <string name="app_name">World_population</string>
     <string name="signin">Sing in</string>
 
-    <string name="countryURL">https://restcountries.eu/rest/v1/all</string>
-    <string name="worldBankURL">http://api.worldbank.org/countries/</string>
+    <string name="firebase_url">https://world-statistics.firebaseio.com/</string>
+    <string name="country_url">https://restcountries.eu/rest/v1/all</string>
+    <string name="worldBank_url">http://api.worldbank.org/countries/</string>
 
-    <!--Indicators-->
+    <!--social auth API ID-->
+    <string name="facebook_app_id">207286549644758</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="intentTitle">Choose app for saving:</string>
+    <string name="intent_title">Choose app for saving:</string>
 </resources>
