uncoment indicator requests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">World_population</string>
+    <string name="app_name">World statistics </string>
     <string name="signin">Sing in</string>
 
     <!--API URLs-->
